# near_payment_receiver

./: Cargo.toml  LICENSE  README.md  build.sh
res/: near_payment_receiver.wasm
src/: constants.rs  contract.rs  error.rs  lib.rs
src/contract/: claim_payment.rs  create_payment.rs  general_impl.rs  process_pending_payment.rs  reject_payment.rs
src/public/: mod.rs  payment_info.rs  payment_receipt.rs
