[package]
name = "near_payment_receiver"
version = "1.0.0"
authors = ["Yurii Oliinyk <yurii.oliinyk.dev@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.1.*"
near-contract-standards = "4.1.*"
thiserror = "1"
serde = "1"

[profile]
[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false
panic = "abort"
overflow-checks = true
strip = "symbols"
